--- a/src/assets/sass/core/_base.scss
+++ b/src/assets/sass/core/_base.scss
@@ -9,6 +9,7 @@
   nav {
     max-width: 1200px;
     margin: 0 auto;
+    padding-left: .5rem;
   }
 
   .title {
@@ -45,7 +46,7 @@
 
 img.logo {
   display: inline;
-  max-width: 100px;
+  max-width: 80px;
   margin-left: .75rem;
   @include mq(small) {
     max-width: 150px;
